fixes safari img stretch

--- a/resources/style/style.css
+++ b/resources/style/style.css
@@ -559,6 +559,11 @@ box-shadow: 0px 10px 30px rgba(0,0,0,0.10);
   padding: 0;
 }
 
+.flexbox-item-noSafariStretch{
+  display: flex;
+  align-items: flex-start;
+}
+
 /*---------------------------------------
     Media Querry
 ---------------------------------------*/
